tests/analyzer/errors/void_discard.rv
fn main() {
    _ = {var b = 1}
}
